src/app/projects/list/list.component.scss
.form-card {
    margin-bottom: 20px;
}

.example-section {
    display: flex;
    align-content: center;
    align-items: center;
    height: 60px;
}

.example-margin {
    margin: 0 10px;
}

.grid-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: stretch;
}

